[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "athena"
version = "0.0.1a"
authors = [
  { name="Lu Xinming", email="lu_xinming@rvhs.edu.sg" },
]
dependencies = [
    "python-telegram-bot",
    "Xlsxwriter",
    "python-dotenv"
]
description = "Telegram Bot for 36 SCE"
readme = "README.md"